<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/titre"
        android:id="@+id/etTitre" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/isbn"
        android:id="@+id/etISBN" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/auteur"
        android:id="@+id/etAuteur" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/o_voulez_vous_chercher"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/bRechercheInterne"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.99"
            android:background="@color/btnBackground"
            android:onClick="rechercher"
            android:text="@string/dans_ma_base"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/bRechercheExterne"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@color/btnBackground"
            android:onClick="rechercher"
            android:text="@string/dans_notre_base"
            android:textColor="@color/textColor" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbRecherche"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listView_Recherche"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

</LinearLayout>