<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_accueil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alice.biblothequevirtuelle.Vue.Accueil"
    android:background="@color/fond"
    android:paddingTop="10dp">
    <ScrollView
...
                android:background="@color/btnBackground"
                android:onClick="onClickAjouter"
                android:text="@string/scanner"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/button_Rech"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
...
