<resources>
    <string name="app_name">BiblothequeVirtuelle</string>
    <string name="ajouter">Ajouter</string>
    <string name="verifier">Vérifier</string>
    <string name="image_biblio">Image Bibliothèque</string>
    <string name="logoappli">logoAppli</string>
    <string name="auteur">Auteur</string>
    <string name="avis">Avis</string>
    <string name="categorie">Catégorie</string>
    <string name="date_de_publication">Date de publication</string>
    <string name="editeur">Editeur</string>
    <string name="isbn">ISBN</string>
    <string name="langue">Langue</string>
    <string name="resume">Résumé</string>
    <string name="scanner">Scanner</string>
    <string name="type">Type</string>
    <string name="titre">Titre</string>
    <string name="couverture">Couverture</string>
    <string name="livres">Mes livres</string>
    <string name="collections">Mes collections</string>
    <string name="Wishlist">Ma WishList</string>
    <string name="compte">Mon Compte</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="rechercher">Rechercher</string>
    <string name="dans_notre_base">dans notre base</string>
    <string name="dans_ma_base">dans ma base</string>
    <string name="o_voulez_vous_chercher">Où voulez vous chercher ?</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="mes_livres">Mes Livres</string>
    <string name="modifier">Modifier</string>
    <string name="dans_la_wishlist">Dans la WishList</string>
    <string name="lu">Lu</string>
    <string name="non_lu">Non lu</string>
    <string name="en_cours">En cours</string>
    <string name="actuellement_pr_t">Actuellement prêté</string>
    <string name="dans_ma_wishlist">Dans ma wishlist</string>
</resources>
